--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -49,6 +49,7 @@ name: Deploy to Cloud Run from Source
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch:
 
 env:
   PROJECT_ID: full-database-417320 # Google Cloud project id
