--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+sqlalchemy = "*"
+pandas = "*"
 fastapi = "*"
 uvicorn = "*"
 
@@ -11,4 +13,3 @@ uvicorn = "*"
 
 [requires]
 python_version = "3.11"
-python_full_version = "3.11.3"
