--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ uvicorn = "*"
 cloud-sql-python-connector = {extras = ["pg8000"], version = "*"}
 pycryptodome = "*"
 python-multipart = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
