--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,6 @@ name = "pypi"
 [packages]
 sqlalchemy = "*"
 pandas = "*"
-fastapi = "*"
 uvicorn = "*"
 cloud-sql-python-connector = {extras = ["pg8000"], version = "*"}
 pycryptodome = "*"
@@ -14,6 +13,7 @@ python-multipart = "*"
 psycopg2-binary = "*"
 wbgapi = "*"
 sqlmodel = "*"
+fastapi = {extras = ["standard"], version = "*"}
 
 [dev-packages]
 black = "*"
