--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ psycopg2-binary = "*"
 wbgapi = "*"
 sqlmodel = "*"
 fastapi = {extras = ["standard"], version = "*"}
+tqdm = "*"
 
 [dev-packages]
 black = "*"
